--- a/app/src/main/res/layout/activity_gym_progress.xml
+++ b/app/src/main/res/layout/activity_gym_progress.xml
@@ -61,16 +61,52 @@
                 android:layout_marginTop="40dp"
                 android:layout_width="match_parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listEntrenosRecycler"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="24dp"
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="24dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="32dp"
-                android:layout_width="match_parent"/>
+                android:minHeight="300dp">
+
+                <LinearLayout
+                    android:id="@+id/emptyList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        app:srcCompat="@drawable/empty_list" />
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Ups!! Not Found"
+                        android:textSize="24sp"
+                        android:textStyle="bold|italic" />
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/listEntrenosRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="16dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </FrameLayout>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
